--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -14,8 +14,9 @@
 	<hr>
 	<br><br>
 
-	<p id="slogan">	Hand painted shoes and hats. Have them your way. Simply Awesome!</p>
+	<p id="slogan">	Hand Painted Shoes and Hats. Simply Awesome!</p>
 	<br><br><br><br><br><br><br><br><br><br><br>
+	
 	
 	<img class=img1 src="images/pooh_frnd_blk_wm.jpg" alt="Pooh and Friends" >
 	<img class=img2 src="images/dnld_dsy_blk_wm.jpg" alt="Donald Duck and Daisy" >
