--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,41 +1,24 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title>Judy Moody Designs</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
 <body>
-
-	<br><br>
-	<h1>Judy Moody Desings</h1>
-
-	<hr>
-	<br><br>
-
-	<p id="slogan">	Hand Painted Shoes and Hats. Simply Awesome!</p>
-	<br><br><br><br><br><br><br><br><br><br><br>
-	
-	
+	<section id="splash">
+		<h1>Judy Moody Designs</h1>
+		<hr>
+		<p id="slogan">	Hand Painted Shoes and Hats. Simply Awesome!</p>
+	</section>
 	<img class=img1 src="images/pooh_frnd_blk_wm.jpg" alt="Pooh and Friends" >
 	<img class=img2 src="images/dnld_dsy_blk_wm.jpg" alt="Donald Duck and Daisy" >
 	<img class=img3 src="images/3_blk_mni_lpd_ptrpn.jpg" alt="Donald Duck and Daisy">
-
 	<p> Our specialty is hand painted Disney Toms for that Disney vacation<br>or simply just a gift for that Disney fanatic.<br> But we also customize to your special ocassion needs. </p>
-
-	<br><br>
-
-	<p><strong>SERVICES:</strong></p>
+	<h2>SERVICES:</h2>
 	<ul>
 		<li>Custom hand painted shoes</li>
 		<li>Custom hand painted hats</li>
 	</ul>
-
-	<br><br>
-	
 	<p class="whiteFont">Contact me: <a href="mailto:geninf2@yahoo.com">geninf2@yahoo.com</a> </p>
-
 </body>
-
 </html>
